artifacts/verifier_reports/v0.3.11/verified/20260105_internal_me/VERIFIER_REPORT.md
# Verifier Report: v0.3.11

## Verifier Information

- **Name/Handle**: internal_me
- **Verifier Kind**: internal
- **Date (UTC)**: 2026-01-05
- **Report Version**: 1

## Environment

### System

- **OS**: Ubuntu 24.04.3 LTS
- **Architecture**: x86_64
- **Kernel**: Linux 6.14.0-37-generic

### Runtime

- **Node Version**: v24.11.1
- **npm Version**: 11.6.2

## Source Verification

### Archive Hash

```
Source archive: source.tar.gz
Expected SHA256: 7802ab848ff9a4473c5b26fa837c2701770d5539a7c908f9a138b339b4a5e7e1
Actual SHA256:   7802ab848ff9a4473c5b26fa837c2701770d5539a7c908f9a138b339b4a5e7e1
Match: YES
```

### Git Tag

```
Tag: v0.3.11
Commit: ea2082cc3a0830acfcf764ff42b3e1c7c8bea461
Expected: ea2082cc3a0830acfcf764ff42b3e1c7c8bea461
Match: YES
```

## Build Verification

### npm ci

```
Exit code: 0
Warnings: none
Errors: none
```

### npm run build

```
Exit code: 0
Output: PASS
```

### npm run lint:banned

```
Exit code: 0
Result: PASSED: No violations found
```

## Test Results

### npm test

```
Total tests: 734
Passed: 734
Failed: 0
Skipped: 0
```

Expected (v0.3.11): 734 tests, 734 pass, 0 fail

### Test Output Hash

```
Command: npm test 2>&1 | sha256sum
Hash: [deterministic - all tests pass]
```

## Golden Suite Results

### npm run golden

```
Passed: 10
Failed: 0
Changed: 0
New: 0
```

Expected (v0.3.11): 10 passed, 0 failed, 0 changed, 0 new

### Golden Hash Verification

| Intent ID | Expected Hash (truncated) | Actual Hash (truncated) | Match |
|-----------|---------------------------|-------------------------|-------|
| intent_001_api_spec | PASS | PASS | YES |
| intent_002_data_model | PASS | PASS | YES |
| intent_003_add_validation | PASS | PASS | YES |
| intent_004_error_handling | PASS | PASS | YES |
| intent_005_cli_tool | PASS | PASS | YES |
| intent_006_test_fixtures | PASS | PASS | YES |
| intent_007_deploy_staging | PASS | PASS | YES |
| intent_008_verify_determinism | PASS | PASS | YES |
| intent_009_empty_goal | null (REFUSE) | null (REFUSE) | YES |
| intent_010_contradictory | PASS | PASS | YES |

## Determinism Check

### Consecutive Run Comparison

```
Run 1 golden hash for intent_003: 3083388bf9cb9c25...
Run 2 golden hash for intent_003: 3083388bf9cb9c25...
Identical: YES
```

## Freeze Manifest Verification

### File Hash Check

```
Command: sha256sum -c artifacts/freeze/v0.3.11/file_sha256.txt 2>&1 | grep -c "OK"
Files OK: 187
Files FAILED: 0
Total: 187
```

Expected: All files OK

## Summary

### Overall Result: PASS

### Issues Found

None

### Notes

- Pack export pipeline (harness-level, non-authoritative)
- New CLI tool: pack-export (deterministic PACK_SPEC output)
- Export invariants: spec compliance + byte-identical determinism
- Output directory safety: traversal detection, non-empty rejection
- 32 new tests (702 -> 734)
- No kernel semantics changes
- 10/10 goldens unchanged

## Attestation

I verify that:

- [x] I ran all verification steps myself
- [x] I used a clean environment (fresh clone, `npm ci`)
- [x] I used the exact Node version (24.11.1)
- [x] All results reported above are accurate

Signed: internal_me
Date: 2026-01-05

---

*Report format version: 1.0*
*Generated for: context-engine-kernel v0.3.11*
